# Light-House

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  run.sh  setup.py
src/lighthouse/: cli.py  config.py  db.py  filetypes.py  indexer.py  picker.py  thumbnails.py  vector_index.py  web.py
src/lighthouse/static/: app.css  app.js
src/lighthouse/templates/: diagnostics.html  fs.html  roots.html  search.html
src/photobrowse/: cli.py  config.py  embeddings.py  exif.py  filetypes.py  indexer.py  picker.py  scanner.py  vector_index.py  watcher.py  web.py
src/photobrowse/static/: app.css  app.js
src/photobrowse/templates/: diagnostics.html  fs.html  roots.html  search.html
